Fix logo display on small screens

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,6 +1,13 @@
 ---
 ---
 
+@media (max-width: 992px) {
+  nav.navbar.fixed-menu .container {
+    position: relative;
+    bottom: 8px;
+  }
+}
+
 /*-- Use For Custom Styling --*/
 .header-social a.lang {
   background-position: center;
